<resources>
    <string name="app_name">Text Wave</string>

    <string name="action_settings">Settings</string>
    <string name="edit_message">Enter a message</string>
    <string name="start_button">Start</string>
    <string name="title_activity_display_message">Message</string>

    <string name="hello_world">Hello world!</string>
    <string name="dark_mode">invert colors</string>
    <string name="options">Options</string>
    <string name="display_preferences">Display Settings</string>
    <string name="dark_mode_title">Invert Colors</string>
    <string name="dark_mode_summary">Sets the text to white on a black background.</string>
    <string name="text_hint">message</string>
    <string name="advanced_preferences">Advanced Settings</string>
    <string name="arm_length_title">Arm Length</string>
    <string name="arm_length_summary">The length of your arm from shoulder to wrist in inches.</string>
    <string name="main_screen_help">Type your message in the box below then press start to display it.</string>
    <string name="how_to_wave">1. Hold your phone facing away from you.\n\n2. Wave it back and forth in a slow, smooth arc.\n\n3. Tap anywhere to exit when you are done.</string>
    <string name="help_button">Help</string>
    <string name="got_it">Okay. Got it.</string>
    <string name="all_caps_title">Caps Lock</string>
    <string name="all_caps_summary">Automatically capitalize the message</string>
    <string name="arm_length_units">in</string>
    <string name="long_range_title">Long Range Mode</string>
    <string name="long_range_summary">Really big text, but you have to wave the phone above your head!</string>
    <string name="vibrate_title">Enable Vibration</string>
    <string name="vibrate_summary">Vibrate when you scroll to each end of the message.</string>
</resources>
