<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_screen_help"/>

        <EditText
            android:id="@+id/scroll_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/text_hint"
            android:singleLine="true"
            android:imeOptions="actionDone"/>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="@dimen/text_size_display_1_material"
            android:text="@string/options"/>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center_vertical"
            android:padding="2dp">
            <TextView
                android:id="@+id/dark_mode_title"
                android:layout_toLeftOf="@+id/dark_mode_toggle"
                android:layout_toStartOf="@+id/dark_mode_toggle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/dark_mode_title"
                android:textSize="@dimen/text_size_title_material"/>
            <TextView
                android:layout_below="@+id/dark_mode_title"
                android:layout_toLeftOf="@+id/dark_mode_toggle"
                android:layout_toStartOf="@+id/dark_mode_toggle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/dark_mode_summary"
                android:textSize="@dimen/text_size_caption_material"/>
            <ToggleButton
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:id="@+id/dark_mode_toggle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center_vertical"
            android:padding="2dp">
            <TextView
                android:id="@+id/all_caps_title"
                android:layout_toLeftOf="@+id/all_caps_toggle"
                android:layout_toStartOf="@+id/all_caps_toggle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/all_caps_title"
                android:textSize="@dimen/text_size_title_material"/>
            <TextView
                android:layout_below="@+id/all_caps_title"
                android:layout_toLeftOf="@+id/all_caps_toggle"
                android:layout_toStartOf="@+id/all_caps_toggle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/all_caps_summary"
                android:textSize="@dimen/text_size_caption_material"/>
            <ToggleButton
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:id="@+id/all_caps_toggle"
                android:checked="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center_vertical"
            android:padding="2dp">
            <TextView
                android:id="@+id/long_range_title"
                android:layout_toLeftOf="@+id/long_range_toggle"
                android:layout_toStartOf="@+id/long_range_toggle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/long_range_title"
                android:textSize="@dimen/text_size_title_material"/>
            <TextView
                android:layout_below="@+id/long_range_title"
                android:layout_toLeftOf="@+id/long_range_toggle"
                android:layout_toStartOf="@+id/long_range_toggle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/long_range_summary"
                android:textSize="@dimen/text_size_caption_material"/>
            <ToggleButton
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:id="@+id/long_range_toggle"
                android:checked="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">
            <Button
                android:id="@+id/start_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_button"
                android:onClick="showMessage"/>
            <Button
                android:id="@+id/help_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/help_button"
                android:onClick="showHelp"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
